# pixi

./: Cargo.toml  README.md  tareas.db
src/: lib.rs  main.rs
