[package]
name = "pixi"
version = "0.1.2"
edition = "2024"

[lib]
name = "pixi"
path = "src/lib.rs"

[[bin]]
name = "pixi"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "wayland"] }
egui = { version = "0.29" }
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
